moving stuff around, this will work without any Python path altering

--- a/master.cfg
+++ b/master.cfg
@@ -1,9 +1,10 @@
 # reload each module
-from buildbot-ros import builders
+import buildbot_ros_cfg
+from buildbot_ros_cfg import builders
 reload(builders)
 
 # import relevant parts
-from buildbot-ros.builders import ros_debian_builder
+from buildbot_ros_cfg.builders import ros_debian_builder
 
 c = BuildmasterConfig = {}
 c['title'] = 'Buildbot-ROS'
