fix import name

--- a/master.cfg
+++ b/master.cfg
@@ -4,7 +4,7 @@ from buildbot_ros_cfg import builders
 reload(builders)
 
 # import relevant parts
-from buildbot_ros_cfg.builders import ros_debbuilder
+from buildbot_ros_cfg.builders import ros_debbuild
 
 c = BuildmasterConfig = {}
 c['title'] = 'Buildbot-ROS'
