--- a/master.cfg
+++ b/master.cfg
@@ -8,7 +8,7 @@ from buildbot_ros_cfg.builders import ros_debbuild
 
 c = BuildmasterConfig = {}
 c['title'] = 'Buildbot-ROS'
-c['titleURL'] = 'http://buildbot.ros.org'
+c['titleURL'] = 'http://github.com/mikeferguson/buildbot-ros'
 c['buildbotURL'] = "http://localhost:8010/"
 
 c['db'] = {
