--- a/master.cfg
+++ b/master.cfg
@@ -1,10 +1,17 @@
+#!/usr/bin/env python
+# buildbot-ros configuration file
+
 # reload each module
 import buildbot_ros_cfg
-from buildbot_ros_cfg import builders
-reload(builders)
+from buildbot_ros_cfg import ros_deb, ros_doc, ros_test
+reload(ros_deb)
+reload(ros_doc)
+reload(ros_test)
 
 # import relevant parts
-from buildbot_ros_cfg.builders import ros_debbuild
+from buildbot_ros_cfg.ros_deb import ros_debbuild
+from buildbot_ros_cfg.ros_test import ros_testbuild
+from buildbot_ros_cfg.ros_doc import ros_docbuild
 
 c = BuildmasterConfig = {}
 c['title'] = 'Buildbot-ROS'
