make output look cleaner by hiding trivial steps when successful

--- a/master.cfg
+++ b/master.cfg
@@ -3,15 +3,17 @@
 
 # reload each module
 import buildbot_ros_cfg
-from buildbot_ros_cfg import ros_deb, ros_doc, ros_test
+from buildbot_ros_cfg import ros_deb, ros_doc, ros_test, launchpad_deb
 reload(ros_deb)
 reload(ros_doc)
 reload(ros_test)
+reload(launchpad_deb)
 
 # import relevant parts
 from buildbot_ros_cfg.ros_deb import ros_debbuild
 from buildbot_ros_cfg.ros_test import ros_testbuild
 from buildbot_ros_cfg.ros_doc import ros_docbuild
+from buildbot_ros_cfg.launchpad_deb import launchped_debbuild
 
 c = BuildmasterConfig = {}
 c['title'] = 'Buildbot-ROS'
