update some comments

--- a/master.cfg
+++ b/master.cfg
@@ -69,16 +69,16 @@ for dist in dist_names:
     print('')
     print('Configuring for %s' % dist)
 
-    # debian builder, currently run nightly
+    # debian builder
     DEB_JOBS += debbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
 
-    # test jobs, triggered by source commit -- these are pretty much done!
+    # test jobs, triggered by source commit
     TEST_JOBS += testbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
 
-    # doc jobs, run nightly
+    # doc jobs
     DOC_JOBS = docbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
 
-    # add nightly debbuilds
+    # get name of first of nightly debuilds for this distro
     build_files = get_release_build_files(oracle.getIndex(), dist)
     nightlyDebNames = list()
     for build_file in build_files:
@@ -86,7 +86,8 @@ for dist in dist_names:
             for code_name in build_file.get_target_os_code_names(os):
                 for arch in build_file.get_target_arches(os, code_name):
                     nightlyDebNames.append(oracle.getNightlyStart(dist)+'_'+dist+'_'+code_name+'_'+arch+'_debbuild')
-    # add nightly docbuilds
+
+    # get name of first nightly docbuilds for this distro
     nightlyDocNames.append(oracle.getNightlyStart(dist)+'_'+dist+'_docbuild')
     print('')
 
