a couple of minor fixes in the master.cfg

--- a/master.cfg
+++ b/master.cfg
@@ -5,7 +5,7 @@
 from buildbot_ros_cfg.ros_deb import ros_debbuild
 from buildbot_ros_cfg.ros_test import ros_testbuild
 from buildbot_ros_cfg.ros_doc import ros_docbuild
-from buildbot_ros_cfg.launchpad_deb import launchped_debbuild
+from buildbot_ros_cfg.launchpad_deb import launchpad_debbuild
 from buildbot_ros_cfg.distro import *
 
 from buildbot.schedulers import forcesched, timed
@@ -50,12 +50,12 @@ c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
 
 # Build Machines
 c['slaves'] = [BuildSlave('rosbuilder1', 'mebuildslotsaros'),
-               BuildSlave('rosbuilder2', 'mebuildslotsaros']
+               BuildSlave('rosbuilder2', 'mebuildslotsaros')]
 c['slavePortnum'] = 9989
 BUILDERS = ['rosbuilder1', 'rosbuilder2']
 
 # RosDistro Stuff
-rosindex = get_index('http://my_ros_index.yaml')
+rosindex = get_index('https://raw.github.com/yournamehere/rosdistro/master/index.yaml')
 dist_names = rosindex.distributions.keys()
 oracle = RosDistroOracle(rosindex, dist_names)
 
@@ -63,6 +63,7 @@ oracle = RosDistroOracle(rosindex, dist_names)
 DEB_JOBS = list()
 TEST_JOBS = list()
 DOC_JOBS = list()
+LPD_JOBS = list()
 nightlyDebNames = list()
 nightlyDocNames = list()
 for dist in dist_names:
