--- a/master.cfg
+++ b/master.cfg
@@ -27,18 +27,17 @@ c['change_source'] = []
 c['schedulers'] = []
 
 c['db'] = {
-    # This specifies what database buildbot uses to store its state.  You can leave
+    # This specifies what database buildbot uses to store its state. You can leave
     # this at its default for all but the largest installations.
     'db_url' : "sqlite:///state.sqlite",
 }
 
 # Web front end
 authz_cfg=authz.Authz(
-    # change any of these to True to enable; see the manual for more
-    # options
+    # change any of these to True to enable; see the manual for more options
     auth=auth.BasicAuth([("ros","ros")]),
     gracefulShutdown = False,
-    forceBuild = 'auth', # use this to test your slave once it is set up
+    forceBuild = 'auth',
     forceAllBuilds = False,
     pingBuilder = False,
     stopBuild = False,
