add example rosdistro

--- a/master.cfg
+++ b/master.cfg
@@ -54,7 +54,7 @@ c['slavePortnum'] = 9989
 BUILDERS = ['rosbuilder1', 'rosbuilder2']
 
 # RosDistro Stuff
-rosindex = get_index('https://raw.github.com/yournamehere/rosdistro/master/index.yaml')
+rosindex = get_index('https://github.com/mikeferguson/rosdistro-buildbot-example/blob/with-apache/index.yaml')
 dist_names = rosindex.distributions.keys()
 oracle = RosDistroOracle(rosindex, dist_names)
 
