--- a/master.cfg
+++ b/master.cfg
@@ -84,10 +84,10 @@ for dist in dist_names:
         for os in build_file.get_target_os_names():
             for code_name in build_file.get_target_os_code_names(os):
                 for arch in build_file.get_target_arches(os, code_name):
-                    nightlyDebNames.append(oracle.getNightlyStart(dist)+'_'+dist+'_'+code_name+'_'+arch+'_debbuild')
+                    nightlyDebNames.append(oracle.getNightlyDebStart(dist)+'_'+dist+'_'+code_name+'_'+arch+'_debbuild')
 
     # get name of first nightly docbuilds for this distro
-    nightlyDocNames.append(oracle.getNightlyStart(dist)+'_'+dist+'_docbuild')
+    nightlyDocNames.append(oracle.getNightlyDocStart(dist)+'_'+dist+'_docbuild')
     print('')
 
 # Build debs at 2AM
