--- a/documentation/Dockerfile.example
+++ b/documentation/Dockerfile.example
@@ -22,7 +22,7 @@ RUN . /root/buildbot-env/bin/activate
 RUN easy_install buildbot
 RUN easy_install buildbot-slave
 RUN pip install rosdistro
-RUN git clone -b trusty git@github.com:mikeferguson/buildbot-ros.git /root/buildbot-ros
+RUN git clone -b master git@github.com:mikeferguson/buildbot-ros.git /root/buildbot-ros
 RUN buildbot create-master /root/buildbot-ros
 RUN buildslave create-slave /root/rosbuilder1 localhost:9989 rosbuilder1 mebuildsalotaros
 
