enable use of PR builders

--- a/master.cfg
+++ b/master.cfg
@@ -54,6 +54,11 @@ c['slaves'] = [BuildSlave('rosbuilder1', 'mebuildslotsaros'),
 c['slavePortnum'] = 9989
 BUILDERS = ['rosbuilder1', 'rosbuilder2']
 
+# Pull request builder tokens (should not be stored in rosdistro)
+# This is a mapping of "repo" -> "token"
+# If a repo has no entry, then pull request builder will not be started
+oauth_tokens = dict()
+
 # RosDistro Stuff
 rosindex = get_index('https://raw.github.com/mikeferguson/rosdistro-buildbot-example/with-apache/index.yaml')
 dist_names = rosindex.distributions.keys()
@@ -74,7 +79,7 @@ for dist in dist_names:
     DEB_JOBS += debbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
 
     # test jobs, triggered by source commit
-    TEST_JOBS += testbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
+    TEST_JOBS += testbuilders_from_rosdistro(c, oracle, dist, BUILDERS, oauth_tokens)
 
     # doc jobs
     DOC_JOBS = docbuilders_from_rosdistro(c, oracle, dist, BUILDERS)
