allow buildbot to run with no doc jobs

--- a/master.cfg
+++ b/master.cfg
@@ -93,7 +93,11 @@ for dist in dist_names:
                     nightlyDebNames.append(oracle.getNightlyDebStart(dist)+'_'+dist+'_'+code_name+'_'+arch+'_debbuild')
 
     # get name of first nightly docbuilds for this distro
-    nightlyDocNames.append(oracle.getNightlyDocStart(dist)+'_'+dist+'_docbuild')
+    try:
+        nightlyDocNames.append(oracle.getNightlyDocStart(dist)+'_'+dist+'_docbuild')
+    except IndexError:
+        # No documentation jobs?
+        print('No documentation jobs will be run')
     print('')
 
 # Build debs at 2AM
@@ -108,15 +112,16 @@ c['schedulers'].append(
 )
 
 # Build debs at 5AM
-c['schedulers'].append(
-    timed.Nightly(
-        name = 'nightly-docbuild',
-        branch = 'master',
-        builderNames = nightlyDocNames,
-        hour=5,
-        minute=0
+if nightlyDocNames:
+    c['schedulers'].append(
+        timed.Nightly(
+            name = 'nightly-docbuild',
+            branch = 'master',
+            builderNames = nightlyDocNames,
+            hour=5,
+            minute=0
+        )
     )
-)
 
 c['schedulers'].append(
     forcesched.ForceScheduler(
